# moli-lang

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Example.moli  LICENSE.md  README.md
examples/: arithmetic.moli  control_flow.moli  hello.moli  variables.moli
src/: ast.rs  bytecode.rs  cli.rs  lexer.rs  lib.rs  main.rs  parser.rs  sema.rs  stdlib.rs  utils.rs  vm.rs
tests/: integration_tests.rs
